--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,25 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+
+    <color name="White">#FFFFFF</color>
+    <color name="Black">#000000</color>
+    <color name="Nothing">#00000000</color>
+    <color name="GrayishViolet">#D0C9D6</color>
+    <color name="LightGrayishViolet">#ECEBED</color>
+    <color name="Heliotrope">#BE52F2</color>
+    <color name="VerySoftViolet">#DBA5F5</color>
+    <color name="Gray">#A9A9A9</color>
+    <color name="OtherGrayishViolet">#E8E6E9</color>
+    <color name="BrightViolet">#9E3EE5</color>
+    <color name="VeryDarkDesaturatedBlue">#1F2041</color>
+    <color name="LightRed">#FF6581</color>
+
+    <color name="Schedule">#6979F8</color>
+    <color name="Right">#4CE2A7</color>
+    <color name="Wrong">#FF4D4D</color>
 </resources>
